--- a/GitHubExtension/View/LightTheme.xaml
+++ b/GitHubExtension/View/LightTheme.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub"
-                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
+                    xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub">
 
     <converters:StringToColorConverter x:Key="ColorConverter" />
     <converters:MarkdownConverter x:Key="MarkdownConverter" />
@@ -48,13 +47,6 @@
         <Setter Property="Padding" Value="4" />
         <Setter Property="AcceptsReturn" Value="True" />
         <Setter Property="TextWrapping" Value="WrapWithOverflow" />
-    </Style>
-
-    <Style x:Key="CheckComboBox" TargetType="{x:Type xctk:CheckComboBox}" >
-        <Setter Property="Foreground" Value="#333" />
-        <Setter Property="FontSize" Value="11pt" />
-        <Setter Property="Margin" Value="12,3,12,0"/>
-        <Setter Property="Height" Value="30" />
     </Style>
 
     <Style x:Key="ComboBoxDockPanel" TargetType="{x:Type DockPanel}" >
