--- a/GitHubExtension/View/IssueEditor.xaml
+++ b/GitHubExtension/View/IssueEditor.xaml
@@ -20,12 +20,36 @@
         <TextBox DockPanel.Dock="Top" Style="{StaticResource TextBox}" Text="{Binding Path=Title, Mode=TwoWay}" />
 
         <Label DockPanel.Dock="Top" Content="Labels" Style="{StaticResource Label}"/>
-        <Button DockPanel.Dock="Top" 
-                Content="Labels" 
-                Command="{Binding Path=SetLabelsCommand}"
-                Height="30" 
-                Foreground="#FF333333" 
-                Margin="12,0,12,0" />
+        <DockPanel DockPanel.Dock="Top" Style="{StaticResource ComboBoxDockPanel}">
+
+            <Button DockPanel.Dock="Right" 
+                    Command="{Binding Path=SetLabelsCommand}"
+                    Content="&#xf046;"
+                    FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
+                    FontSize="22" 
+                    Width="30" Height="30" 
+                    Foreground="#FF333333" 
+                    Margin="6,0,0,0"
+                    ToolTip="Pick Labels"/>
+            
+            <ListBox ItemsSource="{Binding SelectedLabels}" 
+                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                     DockPanel.Dock="Left" IsEnabled="False">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel IsItemsHost="True" />
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
+                <ListBox.ItemTemplate>
+                    <HierarchicalDataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
+                            <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
+                        </StackPanel>
+                    </HierarchicalDataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </DockPanel>
         
         <Label DockPanel.Dock="Top" Content="Assignee" Style="{StaticResource Label}"/>
         <DockPanel DockPanel.Dock="Top" Style="{StaticResource ComboBoxDockPanel}">
