--- a/GitHubExtension/View/IssueEditor.xaml
+++ b/GitHubExtension/View/IssueEditor.xaml
@@ -42,10 +42,9 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <HierarchicalDataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
-                            <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
-                        </StackPanel>
+                        <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" >
+                            <TextBlock Foreground="{Binding Path=Color, Converter={StaticResource InverseColorConverter}}" Text="{Binding Path=Name}" Margin="3,1,3,3"/>
+                        </Border>
                     </HierarchicalDataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
