--- a/GitHubExtension/View/LabelPicker.xaml
+++ b/GitHubExtension/View/LabelPicker.xaml
@@ -33,10 +33,9 @@
             <ListBox.ItemTemplate>
                 <HierarchicalDataTemplate>
                     <CheckBox IsChecked="{Binding Checked}">
-                        <StackPanel Orientation="Horizontal">
-                            <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
-                            <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
-                        </StackPanel>
+                        <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" >
+                            <TextBlock Foreground="{Binding Path=Color, Converter={StaticResource InverseColorConverter}}" Text="{Binding Path=Name}" Margin="3,1,3,3"/>
+                        </Border>
                     </CheckBox>
                 </HierarchicalDataTemplate>
             </ListBox.ItemTemplate>
