--- a/GitHubExtension/View/IssueList.xaml
+++ b/GitHubExtension/View/IssueList.xaml
@@ -15,6 +15,7 @@
              d:DesignWidth="400">
     <UserControl.Resources>
         <converters:StringToColorConverter x:Key="ColorConverter" />
+        <converters:StringToInverseColorConverter x:Key="InverseColorConverter" />
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
         <DataTemplate x:Key="RepositoryTemplate">
             <Grid HorizontalAlignment="Stretch">
@@ -36,10 +37,9 @@
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="LabelTemplate">
-            <StackPanel Orientation="Horizontal">
-                <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" Width="6" Height="16" Margin="3,0" />
-                <TextBlock Margin="3,0" Text="{Binding Path=Name}"/>
-            </StackPanel>
+            <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" >
+                <TextBlock Foreground="{Binding Path=Color, Converter={StaticResource InverseColorConverter}}" Text="{Binding Path=Name}" Margin="3,1,3,3"/>
+            </Border>
         </DataTemplate>
         <DataTemplate x:Key="MilestoneTemplate">
             <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
