--- a/GitHubExtension/View/IssueList.xaml
+++ b/GitHubExtension/View/IssueList.xaml
@@ -14,8 +14,6 @@
              d:DesignHeight="800" 
              d:DesignWidth="400">
     <UserControl.Resources>
-        <converters:StringToColorConverter x:Key="ColorConverter" />
-        <converters:StringToInverseColorConverter x:Key="InverseColorConverter" />
         <BooleanToVisibilityConverter x:Key="BoolToVis" />
         <DataTemplate x:Key="RepositoryTemplate">
             <Grid HorizontalAlignment="Stretch">
@@ -37,9 +35,7 @@
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="LabelTemplate">
-            <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" >
-                <TextBlock Foreground="{Binding Path=Color, Converter={StaticResource InverseColorConverter}}" Text="{Binding Path=Name}" Margin="3,1,3,3"/>
-            </Border>
+            <view:LabelControl />
         </DataTemplate>
         <DataTemplate x:Key="MilestoneTemplate">
             <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Text="{Binding Path=Title}" />
