--- a/GitHubExtension/View/LabelPicker.xaml
+++ b/GitHubExtension/View/LabelPicker.xaml
@@ -33,9 +33,7 @@
             <ListBox.ItemTemplate>
                 <HierarchicalDataTemplate>
                     <CheckBox IsChecked="{Binding Checked}">
-                        <Border Background="{Binding Path=Color, Converter={StaticResource ColorConverter}}" CornerRadius="2" >
-                            <TextBlock Foreground="{Binding Path=Color, Converter={StaticResource InverseColorConverter}}" Text="{Binding Path=Name}" Margin="3,1,3,3"/>
-                        </Border>
+                        <view:LabelControl />
                     </CheckBox>
                 </HierarchicalDataTemplate>
             </ListBox.ItemTemplate>
