--- a/GitHubExtension/View/LabelPicker.xaml
+++ b/GitHubExtension/View/LabelPicker.xaml
@@ -6,6 +6,7 @@
         xmlns:viewModel="clr-namespace:Alteridem.GitHub.Extension.ViewModel"
         xmlns:platformUi="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.11.0"
         xmlns:view="clr-namespace:Alteridem.GitHub.Extension.View"
+        xmlns:controls="clr-namespace:Alteridem.GitHub.Extension.View.Controls"
         mc:Ignorable="d" 
         d:DataContext="{d:DesignInstance viewModel:IssueEditorViewModel}"
         WindowStartupLocation="CenterOwner"
@@ -33,7 +34,7 @@
             <ListBox.ItemTemplate>
                 <HierarchicalDataTemplate>
                     <CheckBox IsChecked="{Binding Checked}">
-                        <view:LabelControl />
+                        <controls:LabelControl />
                     </CheckBox>
                 </HierarchicalDataTemplate>
             </ListBox.ItemTemplate>
