--- a/GitHubExtension/View/Controls/UserView.xaml
+++ b/GitHubExtension/View/Controls/UserView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Name="GitHubUser" x:Class="Alteridem.GitHub.Extension.View.UserView"
+﻿<UserControl x:Name="GitHubUser" x:Class="Alteridem.GitHub.Extension.View.Controls.UserView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Theme.xaml" />
+                <ResourceDictionary Source="..\Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
