--- a/GitHubExtension/View/Controls/IssueListItem.xaml
+++ b/GitHubExtension/View/Controls/IssueListItem.xaml
@@ -8,7 +8,7 @@
              xmlns:converters="clr-namespace:Alteridem.GitHub.Converters;assembly=Alteridem.GitHub"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance octokit:Issue}"
-             d:DesignHeight="60" d:DesignWidth="300">
+             d:DesignHeight="47" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary Source="..\Theme.xaml" />
     </UserControl.Resources>
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -65,15 +65,18 @@
                            TextTrimming="CharacterEllipsis" 
                            HorizontalAlignment="Stretch" Margin="0,0,0,6" />
 
-        <TextBlock Text="{Binding Path=User.Login}" 
-                           Grid.Column="1" 
-                           Grid.Row="1"
-                           Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
         <TextBlock Text="{Binding Path=UpdatedAt.Date,StringFormat=d}" 
-                           Grid.Column="2" 
+                           Grid.Column="1" 
                            Grid.Row="1" 
                            FontStyle="Italic"
                            Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+        
+        <TextBlock Text="{Binding Path=User.Login}" 
+                           Grid.Column="2" 
+                           Grid.Row="1"
+                           Margin="12,0,3,0"
+                           Foreground="{DynamicResource {x:Static view:Theme.GrayTextKey}}" />
+        
         <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="1" 
                                     HorizontalAlignment="Right">
             <TextBlock VerticalAlignment="Center" 
