--- a/GitHubExtension/View/Issue.xaml
+++ b/GitHubExtension/View/Issue.xaml
@@ -71,6 +71,15 @@
                 Width="30" Height="30" 
                 Margin="6px" 
                 ToolTip="Edit Issue"/>
+            <Button 
+                DockPanel.Dock="Right"
+                Command="{Binding Path=OpenOnGitHubCommand}"
+                Content="&#xf113;"
+                FontFamily="/Alteridem.GitHub.Extension;Component/Fonts/#FontAwesome"
+                FontSize="16" 
+                Width="30" Height="30" 
+                Margin="6px" 
+                ToolTip="Open on GitHub"/>
         </DockPanel>
     </Grid>
 </UserControl>
